fix messed up alignment in form

--- a/style/main.css
+++ b/style/main.css
@@ -254,5 +254,10 @@ p {
     margin:                 0.5em;
 }
 
+label {
+    float:                  left;
+    clear:                  left;
+}
+
 
 
